--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,18 @@
  */
 
 // Apply the java-library plugin to add support for Java Library
-apply plugin: 'java-library'
-apply plugin: 'groovy'
+plugins {
+  id "me.champeau.gradle.jmh" version "0.4.4"
+  id "java-library"
+  id "groovy"
+}
+
 
 version = '0.1'
 description = "Personal Java Tools"
 
 sourceCompatibility = 1.8
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -54,16 +59,29 @@ task 'test-src' {
     println sourceSets.test.groovy.srcDirs
 }
 
+// task deleteEmptyBmList(type: Delete) {
+//     delete "$project.gradle.gradleUserHomeDir"
+// }
+// jmhCompileGeneratedClasses.startedBy deleteEmptyBmList
+
+jmh {
+    duplicateClassesStrategy = 'warn'
+    // include = '.*'
+}
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     // api 'org.apache.commons:commons-math3:3.6.1'
 
-    compile 'org.codehaus.groovy:groovy-all:2.4.13'
+    compile 'org.codehaus.groovy:groovy-all:2.4.11'
     testCompile 'junit:junit:4.12'
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
     testCompile 'org.hamcrest:hamcrest-core:1.3'
     testCompile 'com.google.guava:guava:23.6-jre'
 
+    jmh 'org.openjdk.jmh:jmh-core:1.20"'
+    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.20'
+    jmh 'org.codehaus.groovy:groovy-all:2.4.11'
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     // implementation 'com.google.guava:guava:23.0'
 
